# Kicad-Space-Reliability

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  block_editor.py  bom_reliability.py  ecss_fields.py  iec_62380_validation_report.tex  metadata.json  pyproject.toml  pyproject.toml.mutmut  reliability_core.py  reliability_dialog.py  reliability_math.py  sample_report.html  schematic_parser.py  setup.cfg
.github/workflows/: ci.yml
Kicad-Space-Reliability/: LICENSE  README.md  SWIFT_board.csv  __init__.py  analysis_dialog.py  block_editor.py  bom_reliability.py  budget_allocation.py  compare_implementations.py  component_editor.py  correlated_mc.py  ecss_fields.py  growth_tracking.py  inspiration_monte_carlo.py  mc_calibration_dialog.py  metadata.json  mission_profile.py  monte_carlo.py  plugin.py  project_manager.py  reliability_core.py  reliability_dialog.py  reliability_launcher.py  reliability_math.py  report_generator.py  run_standalone.py  run_validation.py  schematic_parser.py  sensitivity_analysis.py  table_generator.py  verify_math.py
Kicad-Space-Reliability/analysis/: __init__.py  engine.py  unified_dialog.py
Kicad-Space-Reliability/docs/: README.md
Kicad-Space-Reliability/tests/: __init__.py  test_reliability_math.py
Kicad-Space-Reliability/ui/: __init__.py  panels.py
Releases/: sample_report.html
docs/: ARCHITECTURE.md  MATHEMATICS.md  METHODOLOGY.md
plugins/: __init__.py  analysis_dialog.py  block_editor.py  bom_reliability.py  budget_allocation.py  classification.py  component_editor.py  component_swap.py  correlated_mc.py  derating_engine.py  ecss_fields.py  growth_tracking.py  import_compat.py  inspiration_sensitivity_analysis.py  mission_profile.py  monte_carlo.py  plugin.py  project_manager.py  reliability_dialog.py  reliability_launcher.py  reliability_math.py  report_generator.py  schematic_parser.py  sensitivity_analysis.py
plugins/analysis/: __init__.py  engine.py
plugins/models/: __init__.py  components.py  constants.py  stress.py
plugins/ui/: __init__.py  book.py  panels.py  theme.py  windowing.py
tests/: conftest.py  helpers.py  test_analysis_core.py  test_analysis_core_edge_cases.py  test_bom_reliability.py  test_component_swap.py  test_correlated_mc.py  test_derating_engine.py  test_ecss_fields.py  test_growth_tracking.py  test_mission_profile.py  test_mutation_basic.py  test_pipeline_integration.py  test_project_manager.py  test_properties.py  test_properties_extended.py  test_properties_more.py  test_publish_readiness.py  test_reliability_math.py  test_report_generator.py  test_schematic_parser.py  test_wx_compat.py
